# ProgettoScacchi

ProgettoScacchi/: CMakeLists.txt
ProgettoScacchi/include/: Casella.h  HelperFunctions.h  Partita.h  PezziDerivati.h  Pezzo.h  Scacchiera.h
ProgettoScacchi/src/: Casella.cpp  HelperFunctions.cpp  Partita.cpp  PezziDerivati.cpp  Pezzo.cpp  Scacchiera.cpp  game.cpp
